# Blue-Environment

./: .gitattributes  Blue-Enviroment.desktop  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.hl  build.rb  build.rs  index.html  install.hl  package.json  remove.hl  tailwind.config.js  vite.config.ts
BEDM/: Makefile  README.md  build.rb  install.rb
BEDM/bedm-daemon/src/: config.rs  pam_auth.rs  session.rs  users.rs  vt.rs
BEDM/bedm-greeter/: Cargo.toml  tauri.conf.json
BEDM/bedm-greeter/src/: main.rs
BEDM/bedm-ui/: tailwind.config.js  vite.config.ts
BEDM/bedm-ui/src/: app.css  index.html
BEDM/bedm-ui/src/components/: Clock.tsx
BEDM/bedm-ui/src/lib/components/: Background.svelte
BEDM/bedm-ui/src/utils/: tauri.ts
BEDM/daemon/: Cargo.toml
BEDM/daemon/src/: config.rs  ipc.rs  main.rs  pam_auth.rs  users.rs  vt.rs
BEDM/packaging/: control
BEDM/ui/: globals.css
BEDM/ui/src/components/: Background.tsx
apps/: list.hacker
apps/blue-archive/: pubspec.yaml
apps/blue-archive/lib/: main.dart
apps/blue-code/: Cargo.toml
apps/blue-edit/: pubspec.yaml
apps/blue-edit/lib/: main.dart
apps/blue-gallery/: pubspec.yaml
apps/blue-gallery/lib/: main.dart
apps/blue-music/: pubspec.yaml
apps/blue-music/lib/: main.dart
apps/blue-screenshot/: pubspec.yaml
apps/blue-screenshot/lib/: main.dart
apps/blue-software/: Cargo.toml  build.rs  pubspec.yaml
apps/blue-software/lib/: main.dart
apps/blue-software/src/: main.rs
apps/blue-software/ui/: interface.slint
apps/blue-video/: pubspec.yaml
apps/blue-video/lib/: main.dart
auth/: Cargo.toml
compositor/: Cargo.toml
compositor/src/: input.rs  main.rs
compositor/src/input/: mod.rs
compositor/src/ipc/: handler.rs  messages.rs  mod.rs  socket.rs
compositor/src/protocols/: cursor_shape.rs  hotplug.rs  idle_inhibit.rs  mod.rs
compositor/src/render/: mod.rs
compositor/src/state/: mod.rs
compositor/src/xwayland/: mod.rs
config/: blue-installer-apply.rb  list.json
config/BEDM/: bedm-pam  bedm.hk  bedm.service  bedm.toml
config/BEDM/systemd/: bedm.service
config/examples/: blue-environment.toml  compositor.toml  keyboard-shortcuts.toml
launcher/: blue  shard.yml
launcher/src/: commands.rb  config.rb  main.cr  ui.rb
packaging/: PKGBUILD  blue-environment-fedora.spec
sddm/: Main.qml
src/: App.tsx  config.rs  constants.tsx  generate_icon.js  index.html  input.rs  ipc.rs  lib.rs  main.rs  main.ts  session.rs  settings_main.rs  tsconfig.json  types.ts  vite.config.ts  wallpaper.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/lib/blue-compositor/: Cargo.toml
src-tauri/lib/blue-compositor/src/: input.rs  ipc.rs  main.rs  render.rs  state.rs  xwayland.rs
src-tauri/src/: ai.rs  apps.rs  cache.rs  icon_resolver.rs  lib.rs  main.rs  packages.rs  session.rs  types.rs  window_tracker.rs
src-tauri/src/BlueArchiveApp/: mod.rs
src-tauri/src/BlueTranslateApp/: mod.rs
src-tauri/src/BlueWebApp/: mod.rs
src-tauri/src/ExplolerApp/: mod.rs
src-tauri/src/MailApp/: mod.rs
src-tauri/src/commands/: misc.rs  network.rs  power.rs  session.rs
src/app_menu/: loader.rs  mod.rs
src/components/: ClipboardHistory.tsx  ClipboardPanel.tsx  ControlCenter.tsx  NotificationCenter.tsx  NotificationPanel.tsx  SettingsSections.tsx  StartMenu.tsx  ToastContainer.tsx  TopBar.tsx  Window.tsx  WindowSwitcher.tsx  WorkspaceSwitcher.tsx
src/components/apps/: AboutApp.tsx  BlueAI.tsx  BlueCodeApp.tsx  BlueCodeSettings.tsx  BlueImagesApp.tsx  BlueSoftwareApp.tsx  BlueWebApp.tsx  CalculatorApp.tsx  CameraApp.tsx  ExplorerApp.tsx  MailApp.tsx  NotepadApp.tsx  SettingsApp.tsx  SystemMonitorApp.tsx  TerminalApp.tsx
src/components/apps/Blue-AI/: main.tsx
src/components/apps/Blue-Archive-App/src/: types.ts
src/components/apps/Blue-Code-App/: main.tsx
src/components/apps/Blue-Code-App/src/: FileTreeView.tsx  Toolbar.tsx  types.ts  useDevServer.ts  useEditorFiles.ts  useFileTree.ts
src/components/apps/Blue-Images-App/: main.tsx
src/components/apps/Blue-Images-App/src/: Toolbar.tsx
src/components/apps/Blue-Screenshot/: CaptureButton.tsx  HistoryPanel.tsx  main.tsx
src/components/apps/Blue-Software-App/: main.tsx
src/components/apps/Blue-Software-App/src/: InstallLogTerminal.tsx  PackageCard.tsx  types.ts
src/components/apps/Blue-Web-App/: main.tsx
src/components/apps/Blue-Web-App/src/: AddressBar.tsx  NewTabPage.tsx  useTabs.ts
src/components/apps/Exploler-App/: main.tsx
src/components/apps/Exploler-App/src/: types.ts  useFileManager.ts
src/components/apps/Explorer-App/: main.tsx
src/components/apps/Mail-App/: ComposeModal.tsx  EmailList.tsx  useMailState.ts
src/components/apps/Settings-App/: display_helpers.ts  main.tsx  types.ts
src/components/apps/System-Monitor-App/: main.tsx
src/components/apps/Terminal-App/: SettingsPanel.tsx  TabBar.tsx  main.tsx
src/compositor/: mod.rs
src/compositor/backend/: mod.rs  udev.rs  winit.rs
src/contexts/: LanguageContext.tsx
src/csd/: mod.rs  render.rs
src/dock/: mod.rs
src/hooks/: useKeyboardShortcuts.ts  useWindowManager.ts
src/lib/: constants.ts  types.ts
src/lib/components/: AppIconGlyph.svelte  ClipboardPanel.svelte  Desktop.svelte  DialogHost.svelte  ErrorBoundary.svelte  GitPanel.svelte  StartMenu.svelte  ToastContainer.svelte  TopBar.svelte  WindowSwitcher.svelte
src/lib/components/apps/: AboutApp.svelte  CalculatorApp.svelte  CameraApp.svelte  NotepadApp.svelte
src/lib/components/apps/Blue-Web/: history.ts  (+4 more)
src/lib/components/settings/: MonitorsSection.svelte  UsersSection.svelte
src/lib/stores/: keyboardShortcuts.ts
src/lib/translations/: arabic.ts  czech.ts  german.ts  italian.ts  japanese.ts  spanish.ts  swedish.ts  turkish.ts  ukrainian.ts
src/lib/utils/: configStore.ts  liveMode.ts  systemBridge.ts
src/notification/: dbus.rs  mod.rs
src/panel/: mod.rs
src/utils/: configStore.ts  notificationManager.ts  systemBridge.ts  useKeyboardShortcuts.ts
ui/: all.slint  app_menu.slint  dock.slint  notifications.slint  panel.slint  settings.slint
(+66 files in other folders)
