[package]
name = "blue-environment"
version = "0.4.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
license = "MIT"
description = "Blue Environment - Wayland desktop for HackerOS"

# ── Main DE binary ──────────────────────────────────────────
[[bin]]
name = "blue-environment"
path = "src/main.rs"

# ── Ecosystem binaries ──────────────────────────────────────
[[bin]]
name = "blue-settings"
path = "src/bin/settings.rs"

[[bin]]
name = "blue-notificationd"
path = "src/bin/notificationd.rs"

[[bin]]
name = "blue-lock"
path = "src/bin/lock.rs"

[[bin]]
name = "blue-screenshot"
path = "src/bin/screenshot.rs"

[[bin]]
name = "blue-files"
path = "src/bin/files.rs"

[build-dependencies]
slint-build = "1.5"

[dependencies]
slint = { version = "1.5", features = ["backend-winit", "renderer-skia"] }

smithay = { version = "0.6", features = [
    "backend_libinput", "backend_udev", "backend_drm", "backend_gbm",
    "backend_egl", "backend_vulkan", "backend_winit", "backend_session_libseat",
    "renderer_gl", "renderer_glow", "renderer_multi", "renderer_pixman",
    "wayland_frontend", "x11rb_event_source", "desktop",
] }

tokio       = { version = "1",   features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
xdg         = "2.5"
nix         = { version = "0.27", features = ["process", "signal", "user", "fs"] }
libc        = "0.2"
zbus        = { version = "4",   features = ["tokio"] }
zvariant    = "4"
ash         = { version = "0.38" }
anyhow      = "1"
thiserror   = "1"
once_cell   = "1"
parking_lot = "0.12"
chrono      = "0.4"
walkdir     = "2"
winit       = { version = "0.29", features = ["rwh_05"] }
image       = { version = "0.25", features = ["png", "jpeg", "webp"] }

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
opt-level     = 3

# Biblioteka eksportująca współdzielone moduły dla binaries
[lib]
name = "blue_environment"
path = "src/lib.rs"
