[package]
name = "blue-environment"
version = "0.6.0"
description = "Blue Environment Desktop Shell"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "blue_environment_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "blue-environment"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http   = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs        = "5.0"
chrono      = "0.4"
uuid        = { version = "1", features = ["v4"] }
glob        = "0.3"
base64      = "0.21"
hk-parser   = "0.3.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
default         = ["custom-protocol"]

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1
strip       = true
