[package]
name = "bedm-greeter"
version = "1.0.0"
edition = "2021"
description = "BEDM greeter — display manager UI (Tauri v2 + React)"
authors = ["LegendaryOS Team"]

[[bin]]
name = "bedm-greeter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
dirs        = "5.0"
chrono      = "0.4"
base64      = "0.21"
toml        = "0.8"
# Inherit workspace pin (time =0.3.36) — cookie 0.18 needs the 1-arg parse API
time        = { workspace = true }
